tests/ui/derive/fail_api_schema_single_arg_validate_rule_extra_arg.rs
use serde::Serialize;

#[derive(Serialize, ts_rs::TS, foundry::ApiSchema)]
struct SingleArgValidateRuleExtraArg {
    #[validate(min(3, 5))]
    name: String,
}

fn main() {}
